Some straight-forward changes for Python 3 compatibility.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,7 +4,7 @@ Changelog
 2.13.3 (unreleased)
 -------------------
 
-- Modernised C code in preparation of porting to Python 3.
+- Ported to Python 3.
 
 2.13.2 (2011-12-12)
 -------------------
